--- a/renuevo/css/main.css
+++ b/renuevo/css/main.css
@@ -83,6 +83,13 @@ padding-bottom: 20px;
 	position:relative;
 	z-index:0;
 	}
+
+	.clickme{
+		width: 100%;
+		z-index: 2;
+		height: 100%;
+	}
+
 	
 #play-buttom{
 	width:151px;
@@ -230,6 +237,7 @@ padding-bottom: 20px;
 }
 
 
+
 #contactos{
     
     float: right;
@@ -240,7 +248,7 @@ padding-bottom: 20px;
     width: 100%;
 	overflow:hidden;
 	height:359px;
-	padding-top:80px;
+	/*padding-top:80px;*/
 }
 
 .tamanio-slider{
@@ -293,8 +301,6 @@ padding-bottom: 20px;
     
 }
 
-
-
 .titulo{
     font-family: 'clear_sansbold';
     font-size: 18px;
@@ -303,6 +309,14 @@ padding-bottom: 20px;
     margin-bottom: 0px;
 	margin-top:25px;
     
+}
+
+.noticia-titulo{
+	font-family: clear_sansbold;
+    font-size: 18px;
+    color: #007828;
+    line-height: 1.6;
+    margin-bottom: 0px;
 }
 
 .txtCabecera{
@@ -328,12 +342,25 @@ padding-bottom: 20px;
     float: left;
 }
 
+.informacionNoticia{
+    /*background-color: cornflowerblue;*/
+    width: 49.8%;
+    float: left;
+	margin-right: 1px;
+	
+}
+
 .img-art{
 	width:100%;
 	overflow:hidden;
 	height:252px;
 	position:relative;
 	}
+.img-art-noticia{
+	width: 100%;
+    overflow: hidden;
+    height: 252px;
+}
 	
 .cuadro-color{
 	width:100%;
@@ -567,7 +594,7 @@ padding-bottom: 20px;
     float: right;
     
 }
-
+/*Nosotrosphp*/
 #textonoticia{
     text-align: justify;
     width: 90%;
