--- a/renuevo/css/main.css
+++ b/renuevo/css/main.css
@@ -32,6 +32,7 @@ body{
     font-family: 'clear_sansregular';
     overflow-y: scroll;
     overflow-x: hidden;
+	
 }
 
 
@@ -43,13 +44,20 @@ padding-bottom: 20px;
 -webkit-box-shadow: 0px 1px 13px rgba(0,0,0,.18);
 	-moz-box-shadow: 0px 1px 13px rgba(0,0,0,.18);
 	box-shadow: 0px 1px 13px rgba(0,0,0,.18);
-	/*position:fixed;*/
-	z-index:1;
+	position:fixed;
+	z-index:1000;
 	width:100%;
 	background:#fff;
+	top: 0%;
 	
 
 
+}
+
+.spacer
+{
+    width: 100%;
+    height: 95px;
 }
 
 #content-menu{
@@ -86,7 +94,7 @@ padding-bottom: 20px;
 
 	.clickme{
 		width: 100%;
-		z-index: 2;
+		/*z-index: 1;*/
 		height: 100%;
 	}
 
@@ -98,7 +106,7 @@ padding-bottom: 20px;
 	position:absolute;
 	left:-20px;
 	top:24%;
-	z-index:2;
+	z-index:1;
 	}
 	
 #rota-logos{
