--- a/renuevo/css/main.css
+++ b/renuevo/css/main.css
@@ -45,7 +45,7 @@ padding-bottom: 20px;
 	-moz-box-shadow: 0px 1px 13px rgba(0,0,0,.18);
 	box-shadow: 0px 1px 13px rgba(0,0,0,.18);
 	position:fixed;
-	z-index:1000;
+	z-index:51;
 	width:100%;
 	background:#fff;
 	top: 0%;
@@ -485,6 +485,7 @@ padding-bottom: 20px;
     width: 84%;
 	margin: auto;
 	padding-top: 30px;
+	border-top: 1px solid #e3e3e3;
     
 }
 
@@ -510,8 +511,8 @@ padding-bottom: 20px;
 
 .contenedor-slider{
 	background: transparent;
-	margin-left: /*162px*/ 31%;
-	margin-top: 100px;
+	margin-left: /*162px*/ 40%;
+	/*margin-top: 100px;*/
 }
 
 .mini-carousel{
